--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.5.3
+    rev: v2.7.1
     hooks:
       - id: prettier
         files: ^script-test\.js$
@@ -24,8 +24,8 @@ repos:
         files: ^script-test\.js$
       - id: check-added-large-files
 
-  - repo: https://github.com/antonbabenko/pre-commit-eslint-security
-    rev: v1.3.0
-    hooks:
-      - id: eslint-security
-        files: ^script-test\.js$ #se avessi scritto files: \.js$ gli hooks si applicherebbero a tutti i file js
+  # - repo: https://github.com/antonbabenko/pre-commit-eslint-security
+  #   rev: v1.3.0
+  #   hooks:
+  #     - id: eslint-security
+  #       files: ^script-test\.js$ #se avessi scritto files: \.js$ gli hooks si applicherebbero a tutti i file js 
