--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "eslint": "^9.27.0",
     "prettier": "^3.5.3"
-  }
+  },
+  "type": "module"
 }
